--- a/test2.html
+++ b/test2.html
@@ -342,7 +342,7 @@ function makePlayerHTML(data, config) {
 <html lang="ko">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0">
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
 <title>방탈출</title>
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
